--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -3,7 +3,7 @@
   author: "Dexploitdm"
 }; %>
 <%= _.template(require('./../includes/header.html').default)(data) %>
-
-<div class="container">Первая страница.</div>
-
+<main>
+  <div class="container">Первая страница.</div>
+</main>
 <%= _.template(require('./../includes/footer.html').default)(data) %>
