--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,8 @@
+@import "~bootstrap/scss/bootstrap";
 @import "common/variables";
-@import "common/base";
 @import "common/fonts";
+@import "common/base";
+
 
 @import "blocks/bottons";
 //forms
