--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -9,6 +9,14 @@ body {
   box-sizing: border-box;
   padding-left: 30px;
   padding-right: 30px;
+  @media (max-width: 986px) {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  @media (max-width: 480px) {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
 }
 main {
   min-height: 90vh;
