--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -33,7 +33,7 @@
           <div class="header-info">
 
 <!--            IS AUTH-->
-            <div class="header-info-box">
+            <div class="header-info-box tablet-hide">
                 <div class="header-scores">
                     <div class="header-scores_text">Остаток баллов: <span class="l-bold">300</span></div>
                     <div class="header-scores_btn">
@@ -51,33 +51,69 @@
                 </div>
             </div>
 <!--            ELSE-->
-            <div class="header-info_btn l-hide">
+            <div class="header-info_btn l-hide tablet-hide">
               <button type="button" class="l-btn l-btn_reg">Регистрация</button>
             </div>
 
-            <div class="header-info_btn">
+            <div class="header-info_btn tablet-hide">
 <!--              IS AUTH-->
               <button type="button" class="l-btn l-btn_login l-btn_login_l1 ">Выход</button>
 <!--              ELSE-->
               <button type="button" class="l-btn l-btn_login l-hide">Вход</button>
             </div>
 
+            <div class="header-info-phone tablet-hide">
+              <div class="header-info-phone_num">8 (800) 945 85 76</div>
+              <div class="header-info-phone_desc">Звонок по России бесплатный</div>
+            </div>
+
+<!--              Tablet/mobile menu-->
               <button type="button" class="drawer-toggle drawer-hamburger">
                   <span class="sr-only">toggle navigation</span>
                   <span class="drawer-hamburger-icon"></span>
               </button>
               <nav class="drawer-nav" role="navigation">
+
+                  <div class="header-info-box">
+                      <div class="header-scores">
+                          <div class="header-scores_text">Остаток баллов: <span class="l-bold">300</span></div>
+                          <div class="header-scores_btn">
+                              <button type="button" class="l-btn l-btn-blue">Пополнить</button>
+                          </div>
+                      </div>
+                      <div class="header-profile">
+                          <div class="header-profile-logo">
+
+                          </div>
+                          <div class="header-profile-info">
+                              <div class="header-profile-info-name">Иванов Иван</div>
+                              <a href="#" class="header-profile_link">Личный кабинет</a>
+                          </div>
+                      </div>
+                  </div>
+                  <!--            ELSE-->
+                  <div class="header-info_btn l-hide">
+                      <button type="button" class="l-btn l-btn_reg">Регистрация</button>
+                  </div>
+
+                  <div class="header-info_btn">
+                      <!--              IS AUTH-->
+                      <button type="button" class="l-btn l-btn_login l-btn_login_l1 ">Выход</button>
+                      <!--              ELSE-->
+                      <button type="button" class="l-btn l-btn_login l-hide">Вход</button>
+                  </div>
                   <ul class="drawer-menu">
                       <li><a class="drawer-brand" href="#">Brand</a></li>
                       <li><a class="drawer-menu-item" href="#">Nav1</a></li>
                       <li><a class="drawer-menu-item" href="#">Nav2</a></li>
                   </ul>
+
+                  <div class="header-info-phone">
+                      <div class="header-info-phone_num">8 (800) 945 85 76</div>
+                      <div class="header-info-phone_desc">Звонок по России бесплатный</div>
+                  </div>
               </nav>
 
-            <div class="header-info-phone">
-              <div class="header-info-phone_num">8 (800) 945 85 76</div>
-              <div class="header-info-phone_desc">Звонок по России бесплатный</div>
-            </div>
           </div>
 
         </div>
