--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,7 +4,7 @@
 @import "common/base";
 
 
-@import "blocks/bottons";
+@import "blocks/buttons";
 //forms
 @import "blocks/forms/form";
 @import "blocks/forms/checkbox";
