--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -12,167 +12,215 @@
   <body class="drawer drawer--right">
     <header style="    margin-bottom: 20px;
 ">
-      <div class="box">
-        <div class="header-layout">
+        <div class="header-box">
+            <div class="box">
+                <div class="header-layout">
 
-          <div class="header-base">
-            <div class="header-title">Розыгрыш конкурсов</div>
-            <div class="header-select">
+                    <div class="header-base">
+                        <div class="header-title">Розыгрыш конкурсов</div>
+                        <div class="header-select">
 
-                <div class="center">
-                    <select name="sources" id="sources" class="custom-select sources" placeholder="Пермь">
-                        <option value="Москва">Москва</option>
-                        <option value="Санкт-Петербург">Санкт-Петербург</option>
-                        <option value="Eкатеринбург">Eкатеринбург</option>
-                        <option value="Пермь">Пермь</option>
-                    </select>
-                </div>
-
-            </div>
-          </div>
-          <div class="header-info">
-
-<!--            IS AUTH-->
-            <div class="header-info-box tablet-hide">
-                <div class="header-scores">
-                    <div class="header-scores_text">Остаток баллов: <span class="l-bold">300</span></div>
-                    <div class="header-scores_btn">
-                        <button type="button" class="l-btn l-btn-blue">Пополнить</button>
-                    </div>
-                </div>
-                <div class="header-profile">
-                    <div class="header-profile-logo">
-
-                    </div>
-                    <div class="header-profile-info">
-                        <div class="header-profile-info-name">Иванов Иван</div>
-                        <a href="#" class="header-profile_link">Личный кабинет</a>
-                    </div>
-                </div>
-            </div>
-<!--            ELSE-->
-            <div class="header-info_btn l-hide tablet-hide">
-              <button type="button" class="l-btn l-btn_reg">Регистрация</button>
-            </div>
-
-            <div class="header-info_btn tablet-hide">
-<!--              IS AUTH-->
-              <button type="button" class="l-btn l-btn_login l-btn_login_l1 ">Выход</button>
-<!--              ELSE-->
-              <button type="button" class="l-btn l-btn_login l-hide">Вход</button>
-            </div>
-
-            <div class="header-info-phone tablet-hide">
-              <div class="header-info-phone_num">8 (800) 945 85 76</div>
-              <div class="header-info-phone_desc">Звонок по России бесплатный</div>
-            </div>
-
-<!--              Tablet/mobile menu-->
-              <button type="button" class="drawer-toggle drawer-hamburger">
-                  <span class="sr-only">toggle navigation</span>
-                  <span class="drawer-hamburger-icon"></span>
-              </button>
-              <nav class="drawer-nav" role="navigation">
-
-                  <div class="header-info-box">
-                      <div class="header-scores">
-                          <div class="header-scores_text">Остаток баллов: <span class="l-bold">300</span></div>
-                          <div class="header-scores_btn">
-                              <button type="button" class="l-btn l-btn-blue">Пополнить</button>
-                          </div>
-                      </div>
-                      <div class="header-profile">
-                          <div class="header-profile-logo">
-
-                          </div>
-                          <div class="header-profile-info">
-                              <div class="header-profile-info-name">Иванов Иван</div>
-                              <a href="#" class="header-profile_link">Личный кабинет</a>
-                          </div>
-                      </div>
-                  </div>
-                  <!--            ELSE-->
-                  <div class="header-info_btn l-hide">
-                      <button type="button" class="l-btn l-btn_reg">Регистрация</button>
-                  </div>
-
-                  <div class="header-info_btn">
-                      <!--              IS AUTH-->
-                      <button type="button" class="l-btn l-btn_login l-btn_login_l1 ">Выход</button>
-                      <!--              ELSE-->
-                      <button type="button" class="l-btn l-btn_login l-hide">Вход</button>
-                  </div>
-                  <ul class="drawer-menu">
-                      <li><a class="drawer-brand" href="#">Brand</a></li>
-                      <li><a class="drawer-menu-item" href="#">Nav1</a></li>
-                      <li><a class="drawer-menu-item" href="#">Nav2</a></li>
-                  </ul>
-
-                  <div class="header-info-phone">
-                      <div class="header-info-phone_num">8 (800) 945 85 76</div>
-                      <div class="header-info-phone_desc">Звонок по России бесплатный</div>
-                  </div>
-              </nav>
-
-          </div>
-
-        </div>
-      </div>
-    </header>
-    <header>
-        <div class="box">
-            <div class="header-layout">
-
-                <div class="header-base">
-                    <div class="header-title">Розыгрыш конкурсов</div>
-                    <div class="header-select">
-
-                        <div class="center">
-                            <select name="sources" id="sources" class="custom-select sources" placeholder="Пермь">
-                                <option value="Москва">Москва</option>
-                                <option value="Санкт-Петербург">Санкт-Петербург</option>
-                                <option value="Eкатеринбург">Eкатеринбург</option>
-                                <option value="Пермь">Пермь</option>
-                            </select>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="header-info">
-
-                    <!--            IS AUTH-->
-                    <div class="header-scores l-hide">
-                        <div class="header-scores_text">Остаток баллов: <span class="l-bold">300</span></div>
-                        <div class="header-scores_btn">
-                            <button type="button" class="l-btn l-btn-blue">Пополнить</button>
-                        </div>
-                    </div>
-                    <div class="header-profile l-hide">
-                        <div class="header-profile-logo">
+                            <div class="center">
+                                <select name="sources" id="sources" class="custom-select sources" placeholder="Пермь">
+                                    <option value="Москва">Москва</option>
+                                    <option value="Санкт-Петербург">Санкт-Петербург</option>
+                                    <option value="Eкатеринбург">Eкатеринбург</option>
+                                    <option value="Пермь">Пермь</option>
+                                </select>
+                            </div>
 
                         </div>
-                        <div class="header-profile-info">
-                            <div class="header-profile-info-name">Иванов Иван</div>
-                            <a href="#" class="header-profile_link">Личный кабинет</a>
+                    </div>
+                    <div class="header-info">
+
+                        <!--            IS AUTH-->
+                        <div class="header-info-box tablet-hide">
+                            <div class="header-scores">
+                                <div class="header-scores_text">Остаток баллов: <span class="l-bold">300</span></div>
+                                <div class="header-scores_btn">
+                                    <button type="button" class="l-btn l-btn-blue">Пополнить</button>
+                                </div>
+                            </div>
+                            <div class="header-profile">
+                                <div class="header-profile-logo">
+
+                                </div>
+                                <div class="header-profile-info">
+                                    <div class="header-profile-info-name">Иванов Иван</div>
+                                    <a href="#" class="header-profile_link">Личный кабинет</a>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <!--            ELSE-->
-                    <div class="header-info_btn">
-                        <button type="button" class="l-btn l-btn_reg">Регистрация</button>
+                        <!--            ELSE-->
+                        <div class="header-info_btn l-hide tablet-hide">
+                            <button type="button" class="l-btn l-btn_reg">Регистрация</button>
+                        </div>
+
+                        <div class="header-info_btn tablet-hide">
+                            <!--              IS AUTH-->
+                            <button type="button" class="l-btn l-btn_login l-btn_login_l1 ">Выход</button>
+                            <!--              ELSE-->
+                            <button type="button" class="l-btn l-btn_login l-hide">Вход</button>
+                        </div>
+
+                        <div class="header-info-phone tablet-hide">
+                            <div class="header-info-phone_num">8 (800) 945 85 76</div>
+                            <div class="header-info-phone_desc">Звонок по России бесплатный</div>
+                        </div>
+
+                        <!--              Tablet/mobile menu-->
+                        <button type="button" class="drawer-toggle drawer-hamburger">
+                            <span class="sr-only">toggle navigation</span>
+                            <span class="drawer-hamburger-icon"></span>
+                        </button>
+                        <nav class="drawer-nav header-drawer" role="navigation">
+
+                            <div class="header-info-box">
+                                <div class="header-profile">
+                                    <div class="header-profile-logo">
+
+                                    </div>
+                                    <div class="header-profile-info">
+                                        <div class="header-profile-info-name">Иванов Иван</div>
+                                        <a href="#" class="header-profile_link">Личный кабинет</a>
+                                    </div>
+                                </div>
+                                <div class="header-scores">
+                                    <div class="header-scores_text">Остаток баллов: <span class="l-bold">300</span></div>
+                                    <div class="header-scores_btn">
+                                        <button type="button" class="l-btn l-btn-blue">Пополнить</button>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <!--            ELSE-->
+                            <div class="header-info_btn l-hide">
+                                <button type="button" class="l-btn l-btn_reg">Регистрация</button>
+                            </div>
+
+                            <div class="header-info_btn">
+                                <!--              IS AUTH-->
+                                <button type="button" class="l-btn l-btn_login l-btn_login_l1 ">Выход</button>
+                                <!--              ELSE-->
+                                <button type="button" class="l-btn l-btn_login l-hide">Вход</button>
+                            </div>
+                            <div class="drawer-menu">
+                                <div class="header-menu-item">
+                                    <a href="#" class="header-menu_link active">Аукционы</a>
+                                </div>
+                                <div class="header-menu-item">
+                                    <a href="#" class="header-menu_link">Начать!</a>
+                                </div>
+                                <div class="header-menu-item">
+                                    <a href="#" class="header-menu_link">Победители</a>
+                                </div>
+                                <div class="header-menu-item">
+                                    <a href="#" class="header-menu_link">Доставка</a>
+                                </div>
+                                <div class="header-menu-item">
+                                    <a href="#" class="header-menu_link">Задать вопрос</a>
+                                </div>
+                                <div class="header-menu-item">
+                                    <a href="#" class="header-menu_link">Помощь</a>
+                                </div>
+                                <div class="header-menu-item">
+                                    <a href="#" class="header-menu_link">О нас</a>
+                                </div>
+                            </div>
+
+                            <div class="header-info-phone">
+                                <div class="header-info-phone_num">8 (800) 945 85 76</div>
+                                <div class="header-info-phone_desc">Звонок по России бесплатный</div>
+                            </div>
+                        </nav>
+
                     </div>
 
-                    <div class="header-info_btn">
-                        <!--              IS AUTH-->
-                        <button type="button" class="l-btn l-btn_login l-btn_login_l1 l-hide">Выход</button>
-                        <!--              ELSE-->
-                        <button type="button" class="l-btn l-btn_login ">Вход</button>
-                    </div>
-                    <div class="header-info-phone">
-                        <div class="header-info-phone_num">8 (800) 945 85 76</div>
-                        <div class="header-info-phone_desc">Звонок по России бесплатный</div>
-                    </div>
                 </div>
-
             </div>
         </div>
+        <div class="header-menu">
+            <div class="header-menu-layout box">
+                <div class="header-menu-item">
+                    <a href="#" class="header-menu_link active">Аукционы</a>
+                </div>
+                <div class="header-menu-item">
+                    <a href="#" class="header-menu_link">Начать!</a>
+                </div>
+                <div class="header-menu-item">
+                    <a href="#" class="header-menu_link">Победители</a>
+                </div>
+                <div class="header-menu-item">
+                    <a href="#" class="header-menu_link">Доставка</a>
+                </div>
+                <div class="header-menu-item">
+                    <a href="#" class="header-menu_link">Задать вопрос</a>
+                </div>
+                <div class="header-menu-item">
+                    <a href="#" class="header-menu_link">Помощь</a>
+                </div>
+                <div class="header-menu-item">
+                    <a href="#" class="header-menu_link">О нас</a>
+                </div>
+            </div>
+
+        </div>
+
     </header>
+<!--    <header>-->
+<!--        <div class="box">-->
+<!--            <div class="header-layout">-->
+
+<!--                <div class="header-base">-->
+<!--                    <div class="header-title">Розыгрыш конкурсов</div>-->
+<!--                    <div class="header-select">-->
+
+<!--                        <div class="center">-->
+<!--                            <select name="sources" id="sources" class="custom-select sources" placeholder="Пермь">-->
+<!--                                <option value="Москва">Москва</option>-->
+<!--                                <option value="Санкт-Петербург">Санкт-Петербург</option>-->
+<!--                                <option value="Eкатеринбург">Eкатеринбург</option>-->
+<!--                                <option value="Пермь">Пермь</option>-->
+<!--                            </select>-->
+<!--                        </div>-->
+
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="header-info">-->
+
+<!--                    &lt;!&ndash;            IS AUTH&ndash;&gt;-->
+<!--                    <div class="header-scores l-hide">-->
+<!--                        <div class="header-scores_text">Остаток баллов: <span class="l-bold">300</span></div>-->
+<!--                        <div class="header-scores_btn">-->
+<!--                            <button type="button" class="l-btn l-btn-blue">Пополнить</button>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="header-profile l-hide">-->
+<!--                        <div class="header-profile-logo">-->
+
+<!--                        </div>-->
+<!--                        <div class="header-profile-info">-->
+<!--                            <div class="header-profile-info-name">Иванов Иван</div>-->
+<!--                            <a href="#" class="header-profile_link">Личный кабинет</a>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    &lt;!&ndash;            ELSE&ndash;&gt;-->
+<!--                    <div class="header-info_btn tablet-hide">-->
+<!--                        <button type="button" class="l-btn l-btn_reg">Регистрация</button>-->
+<!--                    </div>-->
+
+<!--                    <div class="header-info_btn tablet-hide">-->
+<!--                        &lt;!&ndash;              IS AUTH&ndash;&gt;-->
+<!--                        <button type="button" class="l-btn l-btn_login l-btn_login_l1 l-hide">Выход</button>-->
+<!--                        &lt;!&ndash;              ELSE&ndash;&gt;-->
+<!--                        <button type="button" class="l-btn l-btn_login ">Вход</button>-->
+<!--                    </div>-->
+<!--                    <div class="header-info-phone tablet-hide">-->
+<!--                        <div class="header-info-phone_num">8 (800) 945 85 76</div>-->
+<!--                        <div class="header-info-phone_desc">Звонок по России бесплатный</div>-->
+<!--                    </div>-->
+<!--                </div>-->
+
+<!--            </div>-->
+<!--        </div>-->
+<!--    </header>-->
