--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -10,8 +10,7 @@
     <title><%=title%></title>
   </head>
   <body class="drawer drawer--right">
-    <header style="    margin-bottom: 20px;
-">
+    <header>
         <div class="header-box">
             <div class="box">
                 <div class="header-layout">
@@ -34,35 +33,32 @@
                     <div class="header-info">
 
                         <!--            IS AUTH-->
-                        <div class="header-info-box tablet-hide">
-                            <div class="header-scores">
-                                <div class="header-scores_text">Остаток баллов: <span class="l-bold">300</span></div>
-                                <div class="header-scores_btn">
-                                    <button type="button" class="l-btn l-btn-blue">Пополнить</button>
-                                </div>
+                        <div class="header-scores l-hide">
+                            <div class="header-scores_text">Остаток баллов: <span class="l-bold">300</span></div>
+                            <div class="header-scores_btn">
+                                <button type="button" class="l-btn l-btn-blue">Пополнить</button>
                             </div>
-                            <div class="header-profile">
-                                <div class="header-profile-logo">
+                        </div>
+                        <div class="header-profile l-hide">
+                            <div class="header-profile-logo">
 
-                                </div>
-                                <div class="header-profile-info">
-                                    <div class="header-profile-info-name">Иванов Иван</div>
-                                    <a href="#" class="header-profile_link">Личный кабинет</a>
-                                </div>
+                            </div>
+                            <div class="header-profile-info">
+                                <div class="header-profile-info-name">Иванов Иван</div>
+                                <a href="#" class="header-profile_link">Личный кабинет</a>
                             </div>
                         </div>
                         <!--            ELSE-->
-                        <div class="header-info_btn l-hide tablet-hide">
+                        <div class="header-info_btn tablet-hide">
                             <button type="button" class="l-btn l-btn_reg">Регистрация</button>
                         </div>
 
                         <div class="header-info_btn tablet-hide">
                             <!--              IS AUTH-->
-                            <button type="button" class="l-btn l-btn_login l-btn_login_l1 ">Выход</button>
+                            <button type="button" class="l-btn l-btn_login l-btn_login_l1 l-hide">Выход</button>
                             <!--              ELSE-->
-                            <button type="button" class="l-btn l-btn_login l-hide">Вход</button>
+                            <button type="button" class="l-btn l-btn_login ">Вход</button>
                         </div>
-
                         <div class="header-info-phone tablet-hide">
                             <div class="header-info-phone_num">8 (800) 945 85 76</div>
                             <div class="header-info-phone_desc">Звонок по России бесплатный</div>
@@ -133,7 +129,6 @@
                                 <div class="header-info-phone_desc">Звонок по России бесплатный</div>
                             </div>
                         </nav>
-
                     </div>
 
                 </div>
@@ -165,62 +160,4 @@
             </div>
 
         </div>
-
     </header>
-<!--    <header>-->
-<!--        <div class="box">-->
-<!--            <div class="header-layout">-->
-
-<!--                <div class="header-base">-->
-<!--                    <div class="header-title">Розыгрыш конкурсов</div>-->
-<!--                    <div class="header-select">-->
-
-<!--                        <div class="center">-->
-<!--                            <select name="sources" id="sources" class="custom-select sources" placeholder="Пермь">-->
-<!--                                <option value="Москва">Москва</option>-->
-<!--                                <option value="Санкт-Петербург">Санкт-Петербург</option>-->
-<!--                                <option value="Eкатеринбург">Eкатеринбург</option>-->
-<!--                                <option value="Пермь">Пермь</option>-->
-<!--                            </select>-->
-<!--                        </div>-->
-
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="header-info">-->
-
-<!--                    &lt;!&ndash;            IS AUTH&ndash;&gt;-->
-<!--                    <div class="header-scores l-hide">-->
-<!--                        <div class="header-scores_text">Остаток баллов: <span class="l-bold">300</span></div>-->
-<!--                        <div class="header-scores_btn">-->
-<!--                            <button type="button" class="l-btn l-btn-blue">Пополнить</button>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="header-profile l-hide">-->
-<!--                        <div class="header-profile-logo">-->
-
-<!--                        </div>-->
-<!--                        <div class="header-profile-info">-->
-<!--                            <div class="header-profile-info-name">Иванов Иван</div>-->
-<!--                            <a href="#" class="header-profile_link">Личный кабинет</a>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    &lt;!&ndash;            ELSE&ndash;&gt;-->
-<!--                    <div class="header-info_btn tablet-hide">-->
-<!--                        <button type="button" class="l-btn l-btn_reg">Регистрация</button>-->
-<!--                    </div>-->
-
-<!--                    <div class="header-info_btn tablet-hide">-->
-<!--                        &lt;!&ndash;              IS AUTH&ndash;&gt;-->
-<!--                        <button type="button" class="l-btn l-btn_login l-btn_login_l1 l-hide">Выход</button>-->
-<!--                        &lt;!&ndash;              ELSE&ndash;&gt;-->
-<!--                        <button type="button" class="l-btn l-btn_login ">Вход</button>-->
-<!--                    </div>-->
-<!--                    <div class="header-info-phone tablet-hide">-->
-<!--                        <div class="header-info-phone_num">8 (800) 945 85 76</div>-->
-<!--                        <div class="header-info-phone_desc">Звонок по России бесплатный</div>-->
-<!--                    </div>-->
-<!--                </div>-->
-
-<!--            </div>-->
-<!--        </div>-->
-<!--    </header>-->
