--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -1,9 +1,197 @@
 <% var data = {
-  title: "Заголовок | Проект",
-  author: "Dexploitdm"
+title: "Розыгрыш конкурсов | Главная"
 }; %>
 <%= _.template(require('./../includes/header.html').default)(data) %>
 <main role="main">
-  <div class="container">Первая страница.</div>
+
+    <section class="stickers">
+        <div class="stickers-layout box">
+            <div class="sliders">
+                <div class="stickers-slider">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="sticker-box">
+                                <div class="sticker-box-head">Стикер 100 баллов</div>
+                                <div class="sticker-box-cover">
+                                    <div class="sticker-box-cover-bg"
+                                         style="background-image: url('./img/stickers/sticker-100.png');"></div>
+                                    <div class="sticker-box-scores">100 Баллов</div>
+                                </div>
+                                <div class="sticker-box-form">
+                                    <div class="sticker-box-price">Цена: <span class="num">100 Рублей</span></div>
+                                    <div class="sticker-box-action">
+                                        <div class="sticker-box-action-input">
+                                            <input type="number" class="l-input js-count-stickers" value="1"/>
+                                            <div class="sticker-box-action-input_desc">шт.</div>
+                                        </div>
+                                        <div class="sticker-box-action-btn">
+                                            <div class="sticker-box-action-btn_max js-set-count" data-set="max"></div>
+                                            <div class="sticker-box-action-btn_min js-set-count" data-set="min"></div>
+                                        </div>
+                                    </div>
+                                    <div class="sticker-box-btn">
+                                        <button type="button" class="l-btn l-btn-orange">Купить</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="sticker-box">
+                                <div class="sticker-box-head">Стикер 200 баллов</div>
+                                <div class="sticker-box-cover">
+                                    <div class="sticker-box-cover-bg"
+                                         style="background-image: url('./img/stickers/sticker-200.png');"></div>
+                                    <div class="sticker-box-scores">200 Баллов</div>
+                                </div>
+                                <div class="sticker-box-form">
+                                    <div class="sticker-box-price">Цена: <span class="num">200 Рублей</span></div>
+                                    <div class="sticker-box-action">
+                                        <div class="sticker-box-action-input">
+                                            <input type="number" class="l-input js-count-stickers" value="1"/>
+                                            <div class="sticker-box-action-input_desc">шт.</div>
+                                        </div>
+                                        <div class="sticker-box-action-btn">
+                                            <div class="sticker-box-action-btn_max js-set-count" data-set="max"></div>
+                                            <div class="sticker-box-action-btn_min js-set-count" data-set="min"></div>
+                                        </div>
+                                    </div>
+                                    <div class="sticker-box-btn">
+                                        <button type="button" class="l-btn l-btn-orange">Купить</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="sticker-box">
+                                <div class="sticker-box-head">Стикер 300 баллов</div>
+                                <div class="sticker-box-cover">
+                                    <div class="sticker-box-cover-bg"
+                                         style="background-image: url('./img/stickers/sticker-300.png');"></div>
+                                    <div class="sticker-box-scores">300 Баллов</div>
+                                </div>
+                                <div class="sticker-box-form">
+                                    <div class="sticker-box-price">Цена: <span class="num">300 Рублей</span></div>
+                                    <div class="sticker-box-action">
+                                        <div class="sticker-box-action-input">
+                                            <input type="number" class="l-input js-count-stickers" value="1"/>
+                                            <div class="sticker-box-action-input_desc">шт.</div>
+                                        </div>
+                                        <div class="sticker-box-action-btn">
+                                            <div class="sticker-box-action-btn_max js-set-count" data-set="max"></div>
+                                            <div class="sticker-box-action-btn_min js-set-count" data-set="min"></div>
+                                        </div>
+                                    </div>
+                                    <div class="sticker-box-btn">
+                                        <button type="button" class="l-btn l-btn-orange">Купить</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="sticker-box">
+                                <div class="sticker-box-head">Стикер 400 баллов</div>
+                                <div class="sticker-box-cover">
+                                    <div class="sticker-box-cover-bg"
+                                         style="background-image: url('./img/stickers/sticker-400.png');"></div>
+                                    <div class="sticker-box-scores">400 Баллов</div>
+                                </div>
+                                <div class="sticker-box-form">
+                                    <div class="sticker-box-price">Цена: <span class="num">400 Рублей</span></div>
+                                    <div class="sticker-box-action">
+                                        <div class="sticker-box-action-input">
+                                            <input type="number" class="l-input js-count-stickers" value="1"/>
+                                            <div class="sticker-box-action-input_desc">шт.</div>
+                                        </div>
+                                        <div class="sticker-box-action-btn">
+                                            <div class="sticker-box-action-btn_max js-set-count" data-set="max"></div>
+                                            <div class="sticker-box-action-btn_min js-set-count" data-set="min"></div>
+                                        </div>
+                                    </div>
+                                    <div class="sticker-box-btn">
+                                        <button type="button" class="l-btn l-btn-orange">Купить</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="sticker-box">
+                                <div class="sticker-box-head">Стикер 500 баллов</div>
+                                <div class="sticker-box-cover">
+                                    <div class="sticker-box-cover-bg"
+                                         style="background-image: url('./img/stickers/sticker-500.png');"></div>
+                                    <div class="sticker-box-scores">500 Баллов</div>
+                                </div>
+                                <div class="sticker-box-form">
+                                    <div class="sticker-box-price">Цена: <span class="num">500 Рублей</span></div>
+                                    <div class="sticker-box-action">
+                                        <div class="sticker-box-action-input">
+                                            <input type="number" class="l-input js-count-stickers" value="1"/>
+                                            <div class="sticker-box-action-input_desc">шт.</div>
+                                        </div>
+                                        <div class="sticker-box-action-btn">
+                                            <div class="sticker-box-action-btn_max js-set-count" data-set="max"></div>
+                                            <div class="sticker-box-action-btn_min js-set-count" data-set="min"></div>
+                                        </div>
+                                    </div>
+                                    <div class="sticker-box-btn">
+                                        <button type="button" class="l-btn l-btn-orange">Купить</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="sticker-box">
+                                <div class="sticker-box-head">Стикер 600 баллов</div>
+                                <div class="sticker-box-cover">
+                                    <div class="sticker-box-cover-bg"
+                                         style="background-image: url('./img/stickers/sticker-500.png');"></div>
+                                    <div class="sticker-box-scores">600 Баллов</div>
+                                </div>
+                                <div class="sticker-box-form">
+                                    <div class="sticker-box-price">Цена: <span class="num">600 Рублей</span></div>
+                                    <div class="sticker-box-action">
+                                        <div class="sticker-box-action-input">
+                                            <input type="number" class="l-input js-count-stickers" value="1"/>
+                                            <div class="sticker-box-action-input_desc">шт.</div>
+                                        </div>
+                                        <div class="sticker-box-action-btn">
+                                            <div class="sticker-box-action-btn_max js-set-count" data-set="max"></div>
+                                            <div class="sticker-box-action-btn_min js-set-count" data-set="min"></div>
+                                        </div>
+                                    </div>
+                                    <div class="sticker-box-btn">
+                                        <button type="button" class="l-btn l-btn-orange">Купить</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+                    </div>
+                </div>
+                <div class="slider-nav">
+                    <div class="slider-arr">
+                        <div class="prev"></div>
+                    </div>
+<!--                  TODO: Если слайдов <=5 лучше скрыть progress-->
+                    <div class="slider-progress-wrap">
+                        <div class="slider-progress"></div>
+                        <div class="slider-progress2"></div>
+                        <div class="slider-scrollbar"></div>
+                    </div>
+                    <div class="slider-arr right">
+                        <div class="next"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="l-ba box">
+        <div class="l-ba-layout">
+            <div class="l-ba-layout_bg" style="background-image: url('./img/covers/home-cover.png');"></div>
+        </div>
+    </section>
+
 </main>
 <%= _.template(require('./../includes/footer.html').default)(data) %>
