--- a/src/scss/blocks/forms/_select.scss
+++ b/src/scss/blocks/forms/_select.scss
@@ -86,6 +86,7 @@
   visibility: hidden;
   pointer-events: none;
   transform: translateY(-15px);
+  z-index: 99;
 }
 .custom-select.opened .custom-options {
   opacity: 1;
