--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -20,7 +20,7 @@
                     </div>
                     <div class="footer-menu-col">
                         <a href="#" class="footer-menu-link">О нас</a>
-                        <a href="#" class="footer-menu-link">Пользовательское соглашение</a>
+                        <a href="#" class="footer-menu-link">Пользовательское<br /> соглашение</a>
                     </div>
                 </div>
                 <div class="footer-info">
