--- a/src/scss/layers/_footer.scss
+++ b/src/scss/layers/_footer.scss
@@ -110,4 +110,92 @@ footer {
       }
     }
   }
+  @media (max-width: 1401px) {
+    &-menu-link {
+      padding-right: 16px;
+    }
+    &-menu-col:not(first-child) {
+      padding-left: 16px;
+    }
+    &-contact {
+      &-phone {
+        font-size: 20px;
+        padding-bottom: 10px;
+      }
+      &-text {
+        padding-bottom: 18px;
+      }
+    }
+  }
+  @media (max-width: 1120px) {
+    &-payment {
+      padding-right: 0;
+      margin-left: auto;
+    }
+    &-contact {
+      margin-left: 10px;
+      &-soc {
+        &-item {
+          &:not(last-child){
+            margin-right: 10px;
+          }
+        }
+      }
+    }
+    &-menu {
+      flex-wrap: wrap;
+      &-link {
+        padding-right: 0;
+      }
+      &-col {
+        flex-basis: 50%;
+        &:nth-child(2){
+          padding-bottom: 10px;
+          .footer-menu-link {
+            border-right: 0;
+          }
+        }
+      }
+    }
+    &-c {
+      margin-top: 18px;
+    }
+  }
+  @media (max-width: 986px) {
+    &-layout {
+      padding-top: 28px;
+      padding-bottom: 28px;
+    }
+    &-box {
+      flex-wrap: wrap;
+    }
+    &-title {
+      width: 100%;
+      max-width: 100%;
+    }
+    &-menu {
+      width: 100%;
+      padding-top: 14px;
+    }
+    &-info {
+      width: 100%;
+      align-items: center;
+    }
+    &-payment {
+      display: flex;
+      max-width: 100%;;
+      margin-left: initial;
+    }
+  }
+  @media (max-width: 768px) {
+    &-info {
+      display: block;
+      text-align: center;
+      padding-top: 20px;
+    }
+    &-payment {
+      justify-content: center;
+    }
+  }
+
 }
