--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,7 @@
 @import "blocks/stickers";
 @import "blocks/banner";
 @import "blocks/icons";
+@import "blocks/catalogs";
 
 //Слои
 @import "layers/header";
