--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -28,3 +28,9 @@ main {
 .l-bold {
   font-weight: 700;
 }
+@media (min-width: 1120px) {
+  .col-lg-offset{
+    flex: 0 0 20%;
+    max-width: 20%;
+  }
+}
