--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -195,17 +195,90 @@ title: "Розыгрыш конкурсов | Главная"
     <section class="catalogs">
         <div class="box">
             <div class="catalogs-layout">
-                <div class="catalogs-filter">
-                    <div class="catalogs-filter-item js-filter-set">Популярные</div>
-                    <div class="catalogs-filter-item js-filter-set">Ближайшие</div>
-                    <div class="catalogs-filter-item js-filter-set">Репост</div>
-                    <div class="catalogs-filter-item js-filter-set">По ставке</div>
-                    <div class="catalogs-filter-item js-filter-set">По местам</div>
+                <div class="catalogs-filter btn-group sort-button-group">
+                    <button data-sort-direction="desc" data-sort-value="popular" type="button" class="catalogs-filter-item">Популярные <span class="f-icon f-icon-down"></span></button>
+                    <button data-sort-direction="asc" data-sort-value="filedate" type="button" class="catalogs-filter-item">Ближайшие <span class="f-icon f-icon-down"></span></button>
+                    <button data-sort-direction="desc" data-sort-value="repost" type="button" class="catalogs-filter-item">Репост <span class="f-icon f-icon-down"></span></button>
+                    <button data-sort-direction="desc" data-sort-value="best" type="button" class="catalogs-filter-item">По ставке <span class="f-icon f-icon-down"></span></button>
+                    <button data-sort-direction="desc" data-sort-value="places" type="button" class="catalogs-filter-item">По местам <span  class="f-icon f-icon-down"></span></button>
                 </div>
                 <div class="catalogs-box" data-count="15">
+                    <div class="container-fluid">
+                        <div class="catalogs-row row">
 
+                            <div class="catalogs-item col-media col-xs-6 col-sm-4 col-md-3  col-lg-offset" data-popular="1" data-repost="2" data-best="23" data-places="3" data-ticks="636335572495870000">
+                                <div class="thumbnail">
+                                    <div>1</div>
+                                    <div>2</div>
+                                    <div>2587760</div>
+                                    <div>636335572495870000</div>
+                                </div>
+                            </div>
+
+                            <div class="catalogs-item col-media col-xs-6 col-sm-4 col-md-3  col-lg-offset"  data-popular="22" data-repost="6" data-best="53"  data-places="7" data-ticks="636334710921070000">
+                                <div class="thumbnail">
+                                    <div>22</div>
+                                    <div>6</div>
+                                    <div>225940</div>
+                                    <div>636334710921070000</div>
+                                </div>
+                            </div>
+
+                            <div class="catalogs-item col-media col-xs-6 col-sm-4 col-md-3  col-lg-offset"  data-popular="11" data-repost="9"  data-best="12"  data-places="5" data-ticks="636332169180770000">
+                                <div class="thumbnail">
+                                    <div>11</div>
+                                    <div>9</div>
+                                    <div>1013621</div>
+                                    <div>636332169180770000</div>
+                                </div>
+                            </div>
+
+                            <div class="catalogs-item col-media col-xs-6 col-sm-4 col-md-3  col-lg-offset"  data-popular="13" data-repost="32"  data-best="33"  data-places="3" data-ticks="636332169170070000">
+                                <div class="thumbnail">
+                                    <div>13</div>
+                                    <div>32</div>
+                                    <div>8431</div>
+                                    <div>636332169170070000</div>
+                                </div>
+                            </div>
+
+                            <div class="catalogs-item col-media col-xs-6 col-sm-4 col-md-3  col-lg-offset" data-popular="3" data-repost="99"  data-best="4" data-places="18" data-ticks="636332169168700000">
+                                <div class="thumbnail">
+                                    <div>3</div>
+                                    <div>99</div>
+                                    <div>6274</div>
+                                    <div>636332169168700000</div>
+                                </div>
+                            </div>
+
+                            <div class="catalogs-item col-media col-xs-6 col-sm-4 col-md-3  col-lg-offset" data-popular="9" data-repost="34"  data-best="9"  data-places="18" data-ticks="636332155255900000">
+                                <div class="thumbnail">
+                                    <div>9</div>
+                                    <div>34</div>
+                                    <div>1294930</div>
+                                    <div>636332155255900000</div>
+                                </div>
+                            </div>
+                            <div class="catalogs-item col-media col-xs-6 col-sm-4 col-md-3  col-lg-offset"  data-popular="30" data-repost="12" data-best="2" data-places="18" data-ticks="636332155255900000">
+                                <div class="thumbnail">
+                                    <div>30</div>
+                                    <div>12</div>
+                                    <div>1294930</div>
+                                    <div>636332155255900000</div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
             </div>
+
+
+
+
+
+
+
         </div>
     </section>
 
