--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,6 +15,7 @@
 @import "blocks/banner";
 @import "blocks/icons";
 @import "blocks/catalogs";
+@import "blocks/paginate";
 
 //Слои
 @import "layers/header";
