--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,6 +16,7 @@
 @import "blocks/icons";
 @import "blocks/catalogs";
 @import "blocks/paginate";
+@import "blocks/product";
 
 //Слои
 @import "layers/header";
