--- a/src/html/views/product.html
+++ b/src/html/views/product.html
@@ -20,7 +20,28 @@ title: "Розыгрыш конкурсов | Главная"
                 <img src="img/demo/pre.png" />
             </div>
             <div class="product-tabs">
-
+                <ul class="nav nav-tabs">
+                    <li class="nav-item">
+                        <a class="nav-link active" data-toggle="tab" href="#description">Описание</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="tab" href="#characteristics">Характеристики</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="tab" href="#others">Другое</a>
+                    </li>
+                </ul>
+                <div class="tab-content">
+                    <div class="tab-pane fade show active" id="description">
+                        С другой стороны консультация с широким активом требуют определения и уточнения форм развития. Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности способствует подготовки и реализации систем массового участия. Задача организации, в особенности же реализация намеченных плановых заданий представляет собой интересный эксперимент проверки систем массового участия. Идейные соображения высшего порядка, а также реализация намеченных плановых заданий позволяет оценить значение системы обучения кадров, соответствует насущным потребностям. Не следует, однако забывать, что начало повседневной работы по формированию позиции требуют определения и уточнения системы обучения кадров, соответствует насущным потребностям. Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании форм развития.
+                    </div>
+                    <div class="tab-pane fade" id="characteristics">
+                        С другой стороны консультация с широким активом требуют определения и уточнения форм развития. Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности способствует подготовки и реализации систем массового участия. Задача организации, в особенности же реализация намеченных плановых заданий представляет собой интересный эксперимент проверки систем массового участия. Идейные соображения высшего порядка, а также реализация намеченных плановых заданий позволяет оценить значение системы обучения кадров, соответствует насущным потребностям. Не следует, однако забывать, что начало повседневной работы по формированию позиции требуют определения и уточнения системы обучения кадров, соответствует насущным потребностям. Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании форм развития.
+                    </div>
+                    <div class="tab-pane fade" id="others">
+                        С другой стороны консультация с широким активом требуют определения и уточнения форм развития. Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности способствует подготовки и реализации систем массового участия. Задача организации, в особенности же реализация намеченных плановых заданий представляет собой интересный эксперимент проверки систем массового участия. Идейные соображения высшего порядка, а также реализация намеченных плановых заданий позволяет оценить значение системы обучения кадров, соответствует насущным потребностям. Не следует, однако забывать, что начало повседневной работы по формированию позиции требуют определения и уточнения системы обучения кадров, соответствует насущным потребностям. Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании форм развития.
+                    </div>
+                </div>
             </div>
         </div>
     </div>
