--- a/src/html/views/product.html
+++ b/src/html/views/product.html
@@ -44,6 +44,49 @@ title: "Розыгрыш конкурсов | Главная"
                 </div>
             </div>
         </div>
+        <div class="product-desc">
+
+            <div class="product-desc-item">
+                <div class="product-desc-info">
+                    Ставка: <span><span>100</span> Баллов</span>
+                </div>
+                <div class="product-desc-btn">
+                    <button type="button" class="l-btn l-btn-orange">Пополнить</button>
+                </div>
+            </div>
+            <div class="product-desc-item">
+                <div class="product-desc-icon cart-icon people"></div>
+                <div class="product-desc-info">
+                    Участников: <span>7/85</span>
+                </div>
+                <div class="product-desc-text">Нет победителя</div>
+            </div>
+            <div class="product-desc-item">
+                <div class="product-desc-icon cart-icon date"></div>
+                <div class="product-desc-info">
+                    Дата розыгрыша:
+                    <div><span>22.02.2019 22:00</span></div>
+                </div>
+            </div>
+            <div class="product-desc-item product-timer">
+                <div class="product-desc-icon cart-icon cart-icon_big timer"></div>
+                <div class="product-desc-info">
+                    Осталось:
+                    <div class="product-timer-box">
+                        <div class="product-timer-item"><span>23</span> дня</div>
+                        <div class="product-timer-item"><span>14</span> ч.</div>
+                        <div class="product-timer-item"><span>54</span> мин.</div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="places">
+            <h2 class="places-title">Занять место</h2>
+            <div class="places-box">
+
+            </div>
+        </div>
     </div>
 </section>
 
