--- a/src/scss/blocks/_product.scss
+++ b/src/scss/blocks/_product.scss
@@ -182,4 +182,22 @@
   &-title {
 
   }
+  &-layout {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  &-item {
+    max-width: 60px;
+    min-height: 60px;
+    width: 100%;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    background-color: #bbbbbb94;
+    cursor: pointer;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
 }
